# Descent3

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md
Descent3/: CMakeLists.txt  LoadLevel.h  TelCom.cpp  args.cpp  descent.cpp  descent.h  game.cpp  gamesave.cpp  gamesequence.cpp  huddisplay.cpp  init.cpp  lnxmain.cpp  menu.cpp  menu.h  mmItem.cpp  multi.cpp  multi_server.cpp  pilot.cpp  program.h
cmake/: CheckGit.cmake
ddebug/: CMakeLists.txt  windebug.cpp
lib/: renderer.h
manage/: generic.cpp
music/: CMakeLists.txt
renderer/: CMakeLists.txt  HardwareOpenGL.cpp  dyna_gl.h
scripts/: CMakeLists.txt
tools/: CMakeLists.txt
tools/HogMaker/: HogMaker.cpp
ui/: UISystem.cpp
win32/: CMakeLists.txt
